--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
-
+  <div class="Wrapper">
+    <header>
+      <nav class="navbar">
+        <div class="brand">
+          <h2>WC</h2>
+        </div>
+        <ul>
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>About me</li>
+          <li><a href="#"></a>Portfolio</li>
+          <li><a href="#"></a>Contact</li>
+        </ul>
+      </nav>
+    </header>
+  </div>
   
 </body>
 </html>
