--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
-  <div class="Wrapper">
+  <div class="wrapper">
     <header>
       <nav class="navbar">
         <div class="brand">
-          <h2>WC</h2>
+          <h2>W<span>C</span></h2>
         </div>
-        <ul>
-          <li><a href="#"></a>Home</li>
-          <li><a href="#"></a>About me</li>
-          <li><a href="#"></a>Portfolio</li>
-          <li><a href="#"></a>Contact</li>
+        <ul class="menu">
+          <li><a class="active" href="#">Home</a></li>
+          <li><a href="#">About me</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
