modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>portfolio</title>
+  <title>William David</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
@@ -72,7 +72,7 @@
       </div>
       <div class="proyect-details-content">
         <button class="project-details download-cv">
-        <a href="https://widacasan.github.io/react-deploy-example-/">
+        <a href="https://widacasan.github.io/react-deploy-example-/" target="_blank">
           project details
         </a>
         
@@ -84,13 +84,13 @@
       <div class="card__img">
       </div>
       <div class="card__title">
-        <h2>Lista de tareas</h2>
+        <h2>Tienda</h2>
       </div>
       <div class="card__projects-links">
-        <a href="https://github.com/widacasan/react-deploy-example-" target="_blank"> <!-- Aqui va el link de los codigos deproyectos realizados -->
+        <a href="https://github.com/widacasan/curso-frontend-developer-javascript-practico" target="_blank"> <!-- Aqui va el link de los codigos deproyectos realizados -->
          <i class="fab fa-github"></i>
         </a>
-        <a href="https://widacasan.github.io/react-deploy-example-/"> <!-- Aqui va el link de los proyectos realizados -->
+        <a href="https://widacasan.github.io/curso-frontend-developer-javascript-practico/"> <!-- Aqui va el link de los proyectos realizados -->
           <i class="fas fa-globe-americas"></i>
         </a>
         <a href=""> <!-- Aqui va el link de los comentarios sobre como fue el proyecto -->
@@ -99,7 +99,7 @@
       </div>
       <div class="proyect-details-content">
         <button class="project-details download-cv">
-        <a href="https://widacasan.github.io/react-deploy-example-/">
+        <a href="https://widacasan.github.io/curso-frontend-developer-javascript-practico/" target="_blank">
           project details
         </a>
         
